changed add demand , quantity comodities added, select cdpos added